# polyhook-cmake-example

./: CMakeLists.txt  CMakeSettings.json  README.md  deps.sh
src/: main.cpp  stdafx.h
